<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    android:layout_marginVertical="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/one"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/one"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@id/four"
        app:layout_constraintEnd_toStartOf="@id/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/two"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/two"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/one"
        app:layout_constraintEnd_toStartOf="@id/three"
        app:layout_constraintStart_toEndOf="@id/one"
        app:layout_constraintTop_toTopOf="@id/one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/three"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/three"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/two"
        app:layout_constraintTop_toTopOf="@id/one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/four"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/four"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@id/seven"
        app:layout_constraintEnd_toStartOf="@id/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/five"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/five"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/four"
        app:layout_constraintEnd_toStartOf="@id/six"
        app:layout_constraintStart_toEndOf="@id/four"
        app:layout_constraintTop_toTopOf="@id/four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/six"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/six"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/five"
        app:layout_constraintTop_toTopOf="@id/four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/seven"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/seven"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@id/plus"
        app:layout_constraintEnd_toStartOf="@id/eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/eight"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/eight"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/seven"
        app:layout_constraintEnd_toStartOf="@id/nine"
        app:layout_constraintStart_toEndOf="@id/seven"
        app:layout_constraintTop_toTopOf="@id/seven"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nine"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/eight"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/seven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/eight"
        app:layout_constraintTop_toTopOf="@id/seven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/symbol_bg"
        android:text="@string/plus"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@id/multiply"
        app:layout_constraintEnd_toStartOf="@id/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/zero"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/number_bg"
        android:text="@string/zero"
        android:textColor="@color/teal_200"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/plus"
        app:layout_constraintEnd_toStartOf="@id/minus"
        app:layout_constraintStart_toEndOf="@id/plus"
        app:layout_constraintTop_toTopOf="@id/plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minus"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/symbol_bg"
        android:text="@string/minus"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/zero"
        app:layout_constraintTop_toTopOf="@id/plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiply"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/symbol_bg"
        android:text="@string/multiply"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@id/erase"
        app:layout_constraintEnd_toStartOf="@id/divide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/divide"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/symbol_bg"
        android:text="@string/divide"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/multiply"
        app:layout_constraintEnd_toStartOf="@id/equals"
        app:layout_constraintStart_toEndOf="@id/multiply"
        app:layout_constraintTop_toTopOf="@id/multiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equals"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/symbol_bg"
        android:text="@string/equals"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@id/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/divide"
        app:layout_constraintTop_toTopOf="@id/multiply" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/erase"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/symbol_bg"
        android:src="@drawable/ic_baseline_backspace_24"
        android:textSize="24sp"
        app:backgroundTint="@color/teal_200"
        app:iconSize="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multiply" />

</androidx.constraintlayout.widget.ConstraintLayout>